Fixes @Success swagger annotation
