# main.go
@@ -504,7 +504,7 @@ func cleanName(name string) string {
 // @Summary find tutorial GameDefinition
 // @Accept json
 // @Produce json
-// @Success 200 200 {array} model.GameDefinition
+// @Success 200 {array} model.GameDefinition
 // @Security ApiKeyAuth
 // @Router /private/tutorial [get]
 func getTutorialGameDefinition(c *gin.Context) {
@@ -523,7 +523,7 @@ func getTutorialGameDefinition(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path int true "Luchador ID"
-// @Success 200 200 {array} model.Config
+// @Success 200 {array} model.Config
 // @Security ApiKeyAuth
 // @Router /private/mask-config/{id} [get]
 func getMaskConfig(c *gin.Context) {
@@ -554,7 +554,7 @@ func getMaskConfig(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param name path string true "GameDefinition name"
-// @Success 200 200 {object} model.GameDefinition
+// @Success 200 {object} model.GameDefinition
 // @Security ApiKeyAuth
 // @Router /internal/game-definition/{name} [get]
 func getGameDefinitionByName(c *gin.Context) {
@@ -579,7 +579,7 @@ func getGameDefinitionByName(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path int true "GameDefinition id"
-// @Success 200 200 {object} model.GameDefinition
+// @Success 200 {object} model.GameDefinition
 // @Security ApiKeyAuth
 // @Router /internal/game-definition-id/{id} [get]
 func getGameDefinitionByIDInternal(c *gin.Context) {
@@ -591,7 +591,7 @@ func getGameDefinitionByIDInternal(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path int true "GameDefinition id"
-// @Success 200 200 {object} model.GameDefinition
+// @Success 200 {object} model.GameDefinition
 // @Security ApiKeyAuth
 // @Router /private/game-definition-id/{id} [get]
 func getGameDefinitionByID(c *gin.Context) {
@@ -621,7 +621,7 @@ func getGameDefinitionByID(c *gin.Context) {
 // @Summary find all game definitions
 // @Accept json
 // @Produce json
-// @Success 200 200 {array} model.GameDefinition
+// @Success 200 {array} model.GameDefinition
 // @Security ApiKeyAuth
 // @Router /private/game-definition-all [get]
 func getGameDefinition(c *gin.Context) {
@@ -639,7 +639,7 @@ func getGameDefinition(c *gin.Context) {
 // @Summary create random maskConfig
 // @Accept json
 // @Produce json
-// @Success 200 200 {array} model.Config
+// @Success 200 {array} model.Config
 // @Security ApiKeyAuth
 // @Router /private/mask-random [get]
 func getRandomMaskConfig(c *gin.Context) {
@@ -1104,7 +1104,7 @@ func addMatchMetric(c *gin.Context) {
 // @Summary find all Classroom
 // @Accept json
 // @Produce json
-// @Success 200 200 {array} model.Classroom
+// @Success 200 {array} model.Classroom
 // @Security ApiKeyAuth
 // @Router /dashboard/classroom [get]
 func getClassroom(c *gin.Context) {
@@ -1123,7 +1123,7 @@ func getClassroom(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path int true "Classroom id"
-// @Success 200 200 {array} model.StudentResponse
+// @Success 200 {array} model.StudentResponse
 // @Security ApiKeyAuth
 // @Router /dashboard/classroom/students/{id} [get]
 func getClassroomStudents(c *gin.Context) {
@@ -1201,7 +1201,7 @@ func addClassroom(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param accessCode path string true "classroom access code"
-// @Success 200 200 {object} model.Classroom
+// @Success 200 {object} model.Classroom
 // @Security ApiKeyAuth
 // @Router /private/join-classroom/{accessCode} [post]
 func joinClassroom(c *gin.Context) {
@@ -1226,7 +1226,7 @@ func joinClassroom(c *gin.Context) {
 // @Summary find all public available matches
 // @Accept json
 // @Produce json
-// @Success 200 200 {array} model.AvailableMatch
+// @Success 200 {array} model.AvailableMatch
 // @Security ApiKeyAuth
 // @Router /private/available-match-public [get]
 func getPublicAvailableMatch(c *gin.Context) {
@@ -1244,7 +1244,7 @@ func getPublicAvailableMatch(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path int true "Classroom id"
-// @Success 200 200 {array} model.AvailableMatch
+// @Success 200 {array} model.AvailableMatch
 // @Security ApiKeyAuth
 // @Router /private/available-match-classroom/{id} [get]
 func getClassroomAvailableMatch(c *gin.Context) {
@@ -1315,7 +1315,7 @@ func addEvents(c *gin.Context) {
 // @Summary find all level groups
 // @Accept json
 // @Produce json
-// @Success 200 200 {array} model.LevelGroup
+// @Success 200 {array} model.LevelGroup
 // @Security ApiKeyAuth
 // @Router /private/level-group [get]
 func getLevelGroup(c *gin.Context) {
